# todoist-taskwarrior-sync

./: CLAUDE.md  Containerfile  Makefile  README.md  RUNBOOK.md  pyproject.toml  requirements.txt  titwsync
systemd/: titwsync.service  titwsync.timer
tests/: conftest.py  test_client.py  test_sync.py
todoist_taskwarrior/: cli.py  client.py
